# RuVox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FutureFeatures.md  FutureTasks.md  MvpPlan.md  README.md  README.ru.md  RewriteNotes.md  RewriteTaskPlan.md  flake.nix  index.html  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  shell.nix  task_history.md  tsconfig.json
.agents/skills/openspec-apply-change/: SKILL.md
.agents/skills/openspec-archive-change/: SKILL.md
.agents/skills/openspec-explore/: SKILL.md
.agents/skills/openspec-propose/: SKILL.md
.agents/skills/openspec-sync-specs/: SKILL.md
.agents/skills/openspec-verify-change/: SKILL.md
.claude/commands/: interface-design-audit.md  interface-design-critique.md  interface-design-extract.md  interface-design-init.md  interface-design-status.md
.claude/skills/interface-design/: SKILL.md
.github/workflows/: ci.yml
.interface-design/: system.md
ai/rules/: error_handling_and_logs_rules.md
docs/: contributing.md  decisions.md  development.md  index.md  install.md  ipc-contract.md  pipeline.md  preview-dialog.md  storage-schema.md  ui.md  use-cases.md
docs/tts-pipeline/: architecture.md  index.md  pipeline.md  tracked-text.md  word-mapping.md
docs/tts-pipeline/normalizers/: abbreviations.md  code.md  english.md  index.md  numbers.md  symbols.md  urls.md
docs/ui/: architecture.md  configuration.md  index.md  installation.md
legacy/scripts/: test.sh  test_mapping_debug.py
legacy/scripts/silero_tests/: test_integration_full_ui.py
legacy/tests/: __init__.py
legacy/tests/error_handling/: conftest.py  test_error_handling.py
legacy/tests/tts_pipeline/: conftest.py  test_char_mapping.py  test_code.py  test_english.py  test_numbers.py  test_symbols.py  test_tracked_text.py  test_urls.py
legacy/tests/ui/: test_dada_e2e.py  test_format_selector.py  test_markdown_mapper.py  test_mermaid_e2e.py  test_mermaid_renderer.py  test_player.py  test_storage_service.py  test_text_viewer_highlight.py  test_tts_e2e.py
nix/: devshell.nix
openspec/: config.yaml
openspec/specs/ipc-commands/: spec.md
scripts/: bisect-screenshots.sh  generate_golden.py  kwin-activate-ruvox.js  launch-prod.sh  rebuild_prod.sh  screenshot-app.sh  test.sh  test_mapping_debug.py  tts_generate.py
scripts/silero_tests/: test_integration_full_ui.py  test_integration_real_components.py  test_integration_threadpool.py
src/: App.tsx  globals.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/pipeline-core/: Cargo.toml
src-tauri/pipeline-core/src/: lib.rs
src-tauri/pipeline-core/src/normalizers/: symbols.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/pipeline/: constants.rs  html_extractor.rs  mod.rs  tracked_text.rs
src-tauri/src/pipeline/normalizers/: abbreviations.rs  code.rs  code_blocks.rs  english.rs  mod.rs  numbers.rs  symbols.rs  urls.rs
src-tauri/src/player/: mod.rs
src-tauri/src/storage/: eviction.rs  mod.rs  schema.rs  service.rs  test_util.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/tts/: availability.rs  engine.rs  mod.rs  supervisor.rs  switcher.rs
src-tauri/src/tts/piper/: catalog.rs  download.rs  engine.rs  mod.rs  timestamps.rs
src-tauri/tests/: golden.rs  supervisor.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: mock_ttsd_suicide.py
src-tauri/tests/fixtures/pipeline/: README.md  abbreviation_http.char_map.json  abbreviation_http.expected.txt  abbreviation_http.input.txt  abbreviation_upper.char_map.json  abbreviation_upper.expected.txt  abbreviation_upper.input.txt  arrow_symbols.char_map.json  arrow_symbols.expected.txt  arrow_symbols.input.txt  camelcase.char_map.json  camelcase.expected.txt  camelcase.input.txt  date_dot.char_map.json  date_dot.expected.txt  date_dot.input.txt  date_iso.char_map.json  date_iso.expected.txt  date_iso.input.txt  duration_ms.char_map.json  duration_ms.expected.txt  duration_ms.input.txt  email.char_map.json  email.expected.txt  email.input.txt  english_word_common.char_map.json  english_word_common.expected.txt  english_word_common.input.txt  english_word_it.char_map.json  english_word_it.expected.txt  english_word_it.input.txt  filepath_absolute.char_map.json  filepath_absolute.expected.txt  filepath_absolute.input.txt  greek_letters.char_map.json  greek_letters.expected.txt  greek_letters.input.txt  ip_address.char_map.json  ip_address.expected.txt  ip_address.input.txt  (+100 more)
src/components/: AppShell.tsx  Player.module.css  Player.tsx  QueueList.module.css  QueueList.tsx  TextViewer.module.css  TextViewer.tsx  ThemeSwitcher.tsx  icons.tsx
src/dialogs/: PreviewDialog.module.css  PreviewDialog.tsx  Settings.tsx
src/fast_tts/: __init__.py  pipeline.py
src/fast_tts_rus/: __init__.py  pipeline.py
src/lib/: engineSelection.test.ts  engineSelection.ts  errors.ts  html.ts  markdown.ts  mermaid.ts  notificationBridge.ts  piperVoices.ts  tauri.ts  useTauriEvents.ts  wordHighlight.test.ts  wordHighlight.ts  wordSpans.test.ts  wordSpans.ts
src/ruvox/: __init__.py
src/stores/: searchQuery.ts  selectedEntry.ts
tests/: __init__.py  conftest.py  test_code.py  test_english.py  test_numbers.py  test_pipeline.py  test_symbols.py
tests/error_handling/: __init__.py  test_error_handling.py
tests/tts_pipeline/: conftest.py  test_abbreviations.py  test_char_mapping.py  test_code.py  test_pipeline.py  test_tracked_text.py  test_word_mapping.py
tests/ui/: conftest.py  test_dada_e2e.py  test_format_selector.py  test_markdown_mapper.py  test_mermaid_e2e.py  test_mermaid_preview.py  test_mermaid_renderer.py  test_player.py  test_storage_service.py  test_text_viewer_highlight.py  test_text_viewer_markdown.py  test_text_viewer_mermaid.py  test_tts_chunking.py
ttsd/: pyproject.toml
ttsd/tests/: test_chunking.py  test_main_stub.py  test_main_unit.py  test_protocol.py  test_silero.py  test_timestamps.py
ttsd/ttsd/: __init__.py  __main__.py  chunking.py  main.py  protocol.py  silero.py  timestamps.py
(+107 files in other folders)
