[package]
name = "ruvox-tauri"
version = "0.2.0"
description = "RuVox 2 — desktop app for reading technical texts aloud"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruvox_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-mpv: Tauri plugin that controls an mpv subprocess via JSON IPC.
# Chosen over libmpv2 per project spec ("prefer tauri-plugin-mpv if viable").
# Viable: supports custom CLI args (--af=scaletempo2, --no-video), arbitrary
# mpv commands via command(["get_property", "time-pos"]) for position polling,
# and integrates with the Tauri AppHandle we already hold.
tauri-plugin-mpv = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[profile.dev]
incremental = true
