[package]
name = "ruvox-tauri"
version = "0.2.0"
description = "RuVox — desktop app for reading technical texts aloud"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruvox_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Exposes `tts::supervisor::test_helpers` so integration tests can build the
# same recording emitter that unit tests use. Off by default — the helpers
# stay out of release/dev binaries.
test-helpers = []

# Integration tests that depend on the test_helpers module. Cargo skips them
# unless the corresponding feature is enabled (CI passes --all-features).
[[test]]
name = "supervisor"
path = "tests/supervisor.rs"
required-features = ["test-helpers"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
# tauri-plugin-mpv: Tauri plugin that controls an mpv subprocess via JSON IPC.
# Chosen over libmpv2 per project spec ("prefer tauri-plugin-mpv if viable").
# Viable: supports custom CLI args (--af=scaletempo2, --no-video), arbitrary
# mpv commands via command(["get_property", "time-pos"]) for position polling,
# and integrates with the Tauri AppHandle we already hold.
tauri-plugin-mpv = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"
aho-corasick = "1"
once_cell = "1"
dirs = "6"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "sync", "time"] }
parking_lot = "0.12"
scraper = "0.19"
thiserror = "1"
tracing = "0.1"
arboard = "3"
libc = "0.2"

# Opus encoding pipeline (WAV → Ogg-Opus). `opus` is the FFI binding to the
# C reference libopus 1.x (system dep — see shell.nix / flake.nix). A
# pure-Rust port (`opus-rs`) was evaluated and is currently ~2× slower on
# our 32 kbps VOIP profile; tracked in issue #19.
opus = "0.3"
ogg = "0.9"
hound = "3.5"
byteorder = "1.5"

# ── Piper TTS (native engine) ────────────────────────────────────────────────
# `piper-rs` runs Piper's VITS ONNX models in-process. We pin both `ort` and
# `ort-sys` to `=2.0.0-rc.9` because piper-rs 0.1.9's source uses ort APIs that
# were broken between rc.9 and rc.12, and `ort 2.0.0-rc.9` requires
# `ort-sys = 2.0.0-rc.9` (later ort-sys releases dropped the `load-dynamic`
# feature). See tmp/piper_rs_spike/findings.md for the reasoning.
#
# `ort` is configured with `default-features = false` + `load-dynamic` so
# onnxruntime is dlopened from the path in `ORT_DYLIB_PATH` (set by shell.nix
# to ${pkgs.onnxruntime}/lib/libonnxruntime.so) — avoids the default
# `download-binaries` feature which fetches a prebuilt blob at build time and
# does not work inside the nix sandbox.
piper-rs = "0.1.9"
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
ort-sys = "=2.0.0-rc.9"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
similar = "2"
filetime = "0.2"
# `test-util` enables `#[tokio::test(start_paused = true)]` so the supervisor
# backoff schedule (1s/3s/5s) doesn't make tests sleep for ~9s.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[profile.dev]
incremental = true
